@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* babenko: Degraded cells are considered healthy. Update masters via snapshots.
 * babenko: "move" verb now respects "preserve_creation_time" option. Update masters via snapshot.
 * gritukan: Added last leader change time in cell. Update masters via snapshot.
 * ifsmirnov: Disallow changing bundle for mounted tables beyond the portal. Update masters via snapshot.
